--- a/src/styles/productListing.css
+++ b/src/styles/productListing.css
@@ -3,18 +3,16 @@
 }
 .label-group{
     padding: 1rem;
-    /* margin:1rem; */
 }
 .product-filter{
-    /* margin:2rem; */
-    padding: 1rem;
-    /* border: 0.1rem solid var(--primary-color); */
+    padding: 0.5rem;
     border-radius: 1rem;
-    height: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 .filters{
-    padding:1rem;
-    
+    padding:1rem; 
 }
 
 .slider-price-range{
@@ -23,8 +21,27 @@
 }
 
 .products{
-    /* gap:2rem; */
     margin: 2rem;
     justify-content: space-evenly;
     flex-wrap: wrap;
+}
+.product-list{
+    display: grid;
+    grid-template-columns: 20rem calc(100vw-20);
+    grid-template-rows: 100vh;
+    grid-template-areas: "sidebar main";
+}
+.product-list-filter{
+    grid-area: sidebar;
+    overflow: auto;
+}
+.product-list-main{
+    grid-area: main;
+    justify-content: center;  
+    overflow: scroll;
+}
+.product-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
 }
