--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -4,6 +4,20 @@
     margin:1rem;
     padding: 1rem;
     transition: transform .2s; 
+    font-size: 1.2rem;
+    height: fit-content;
+}
+.card-title{
+    width: 18rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.vertical{
+    width: 20rem;
+}
+.cart-text{
+    font-size: 1.5rem;
 }
 .card:hover{
     /* cursor: pointer; */
@@ -16,16 +30,34 @@
 .card-image-container:hover{
     opacity: 0.8;
 }
-
+.card-image{
+    height: 20rem;
+    margin-top: 0;
+}
 .card-btn{
     background-color: var(--primary-color);
     color:var(--cta-color);
     border: 3px solid var(--primary-color);
+    padding: 0.5rem;
+    margin: 0.5rem;
 }
 
 .card-btn:hover{
     background-color: var(--cta-color);
     color:var(--primary-color);
-    border: 0;
+    border: 3px solid var(--cta-color);
+    /* border: 0; */
     cursor: pointer;
+}
+.btn-to-shop{
+    width: fit-content;
+}
+.card-tag{
+    padding: 0.5rem 0;
+    border-radius: 0.5rem;
+    background-color: var(--primary-color);
+    /* opacity: 0.1; */
+}
+.card-tag > .icon-btn, .card-tag > .icon-btn:hover{
+    color: var(--cta-color);
 }
