--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 
 .App {
   display: grid;
-  grid-template-rows: 15vh calc(100vh-15) ;
+  grid-template-rows: 15vh 85vh;
   /* grid-template-rows: 1fr 5fr ; */
   /* 17vh ; */
   grid-template-areas: 
